  _____ _    _ __  __  _____          
 / ____| |  | |  \/  |/ ____|   /\    
| |  __| |  | | \  / | |  __   /  \   
| | |_ | |  | | |\/| | | |_ | / /\ \  
| |__| | |__| | |  | | |__| |/ ____ \ 
 \_____|\____/|_|  |_|\_____/_/    \_\

=======================================
Framework Backend



1.2.14
=======================================
- Create class GumgaTenancyUtils that contains the method changeOi
- System.out.println changed to Logger.log

1.2.13 and Before
=============
Not yet
